[package]
name = "srp6"
version = "1.0.0-alpha.6"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2018"
description = "A safe implementation of the secure remote password authentication and key-exchange protocol (SRP version 6 and 6a)"
license = "MIT"
include = ["src", "examples", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
thiserror = "1.0"
sha-1 = "0.10"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.4"
log = { version = "0.4", features = ["release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0"

[features]
legacy = []
default = []
test-for-openssl-compatibility = []
