[package]
name = "srp6"
version = "1.0.0-alpha.6"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2018"
description = "A safe implementation of the secure remote password authentication and key-exchange protocol (SRP version 6 and 6a)"
license = "MIT"
include = ["src", "examples", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
thiserror = "2.0"
rand = "0.8"
num-bigint = { version = "0.4", features = [
    "rand",
    "serde",
], default-features = false }
num-traits = "0.2"
hex-literal = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = { version = "^0.10", optional = true }
sha2 = { version = "^0.10", optional = true }

[dev-dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0"

[features]
default = ["hash-sha512"]

hash-sha512 = ["dep:sha2"]
hash-sha1 = ["dep:sha1"]

dangerous = ["hash-sha1"]
wow = ["dangerous"]

doc-test-mocks = ["hash-sha512"]
test-rfc-5054-appendix-b = ["hash-sha1"]

# this is a testing only feature, not relevant for the library
test-for-openssl-compatibility = []
