[package]
name = "srp6"
version = "1.0.0-beta.2"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
repository = "https://github.com/sassman/srp6-rs"
categories = ["Cryptography"]
keywords = [
    "srp",
    "secure remote password",
    "authentication",
    "key exchange",
    "protocols",
]
edition = "2018"
description = "A safe implementation of the secure remote password authentication and key-exchange protocol - SRP version 6 and 6a"
license = "MIT"
include = ["src", "examples", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
thiserror = "2.0"
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
num-bigint = { version = "0.4", features = [
    "rand",
    "serde",
], default-features = false }
num-traits = "0.2"
hex-literal = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = { version = "^0.10", optional = true }
sha2 = { version = "^0.10", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["hash-sha512"]

hash-sha512 = ["dep:sha2"]
hash-sha1 = ["dep:sha1"]

dangerous = ["hash-sha1"]
wow = ["dangerous"]

test-rfc-5054-appendix-b = ["hash-sha1"]
